--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <div id="modal-root"></div>
+    <div id="upload-root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
